--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
     "hbs": "^4.2.0",
+    "passport": "^0.6.0",
     "sqlite3": "^5.1.2"
   },
   "devDependencies": {
